--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-   
+   <h1 id="Titulo">Titulo</h1>
+   Nome: <input type="text" id="Nome" placeholder="digite seu nome"><br><br>
+   E-mail: <input type="text" id="E-mail"><br><br>
+   <button onclick="mostrarResultado()">Salvar</button>
+
+   <h2 id="resultado">resultado</h2>
+   <script src="script.js"></script>
 </body>
 </html>
